--- a/core/templates/reports/ocr.xml
+++ b/core/templates/reports/ocr.xml
@@ -1,24 +1,23 @@
 {% load custom_filters %}<?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
 
-    <title>NDNP OCR Dumps</title>
+    <title>NDNP OCR Data</title>
     <link rel="self" type="application/atom+xml" href="http://{{ request.get_host }}{% url chronam_ocr_atom %}" />
     <id>info:lc/ndnp/ocr</id>
     <author>
         <name>Library of Congress</name>
         <uri>http://loc.gov</uri>
     </author>
-    <updated>{{ now }}</updated>
+    <updated>{{ last_updated|rfc3339 }}</updated>
 
-    {% for dumpfile in dumpfiles %}
+    {% for dump in dumps %}
     <entry>
-        <title>{{ dumpfile.name }}</title>
-        <link rel="alternate" type="application/x-bzip2" href="http://{{ request.get_host }}/data/dumps/ocr/{{ dumpfile.name }}" />
-        <id>info:lc/ndnp/dump/ocr/{{ dumpfile.name }}</id>
-        <updated>{{ dumpfile.updated|rfc3339 }}</updated>
-        <summary type="xhtml"><div xmlns="http://www.w3.org/1999/xhtml">OCR dump file <a href="http://{{ request.get_host }}/data/dumps/ocr/{{ dumpfile.name }}">{{ dumpfile.name }}</a> with size {{ dumpfile.size|filesizeformat }} generated {{ dumpfile.updated }}</div></summary>
+        <title>{{ dump.name }}</title>
+        <link rel="enclosure" length="{{ dump.size }}" hash="sha1:{{ dump.sha1 }}" type="application/x-bzip2" href="http://{{ request.get_host }}/data/ocr/{{ dump.name }}" />
+        <id>info:lc/ndnp/dump/ocr/{{ dump.name }}</id>
+        <updated>{{ dump.created|rfc3339 }}</updated>
+        <summary type="xhtml"><div xmlns="http://www.w3.org/1999/xhtml">OCR dump file <a href="http://{{ request.get_host }}/data/dumps/ocr/{{ dump.name }}">{{ dump.name }}</a> with size {{ dump.size|filesizeformat }} generated {{ dump.created }}</div></summary>
     </entry>
     {% endfor %}
 
 </feed>
-
