--- a/core/templates/page_text.html
+++ b/core/templates/page_text.html
@@ -27,7 +27,7 @@
     <h3>Persistent link: <a href="{{page.url}}">http://{{host}}{{page.url}}</a></h3>
     </div> 
 
-    <h2><a href="{% url chronam_explain_ocr %}">What is OCR?</a></h2>
+    <h2><a href="{% url chronam_ocr %}">What is OCR?</a></h2>
 
     <div class="thumbnail">
         <br />
