--- a/core/templates/about_api.html
+++ b/core/templates/about_api.html
@@ -41,6 +41,7 @@ titles</li>
 America resources.</li>
 <li><a href="#linked-data">JSON</a> views of Chronicling America resources.</li> 
 <li><a href="#linked-data">Linked Data</a> views of Chronicling American resources.</li> 
+<li><a href="#bulk-data">Bulk Data</a> for research and external services.</li>
 <li><a href="#cors_jsonp">CORS and JSONP</a> support for your JavaScript
 applications.</li>
 </ul> 
@@ -197,6 +198,10 @@ first available edition from January 5, 1900
 <br />
 third available page from first edition, January 5, 1900
 </li> 
+<li><a href="/newspapers.json">/newspapers.json</a>
+<br>
+a list of all newspaper titles for which there is digital content
+</li>
 <li><a href="/batches.json">/batches.json</a>
 <br>
 a list of all batches of content that have been loaded
@@ -204,6 +209,7 @@ a list of all batches of content that have been loaded
 <li><a href="/batches/batch_dlc_jamaica_ver01.json">/batches/batch_dlc_jamaica_ver01.json</a>
 <br>
 detailed information about a specific batch
+</li>
 <li><a href="/awardees.json">/awardees.json</a>
 <br>
 a list of all NDNP Awardees as JSON
@@ -216,7 +222,8 @@ detailed information about a specific awardee
 
 You will notice that many of these JSON views link to each other. This allows
 the JSON to stay relatively compact by including only information about a 
-particular entity, while linking to a detail view for a related entity.
+particular entity, while providing a link to fetch more detail about a 
+related entity.
 </p>
 <p class="backtotop"><a href="#skip_menu">Top</a></p> 
 
@@ -311,6 +318,37 @@ their lead in encouraging additional connections between data and
 vocabulary providers.  Please be aware that how we use these vocabularies
 will likely change over time, as they continue to develop, and as new 
 vocabularies are introduced.</p> 
+<p class="backtotop"><a href="#skip_menu">Top</a></p> 
+
+<a name="bulk-data"></a>
+<h3>Bulk Data</h3>
+<p>
+In certain situations the granular access provided by the API may be somewhat
+constraining. For example, perhaps you are a researcher who would like to 
+try out new indexing techniques on the millions of pages of OCR data in
+Chronicling America. Or perhaps you are a service provider and anticipate
+needing to support a high volume of fulltext searches across the corpus, and 
+do not want the Chronicling America API as an external dependency.
+
+To support these and other potential use cases we are beginning to provide
+bulk access to the underlying data sets. The initial bulk data sets include:
+
+<ul>
+    <li>Batches: each batch of digitized content that is provided by awardees is
+    made available via the Batches <a href="{% url chronam_batches %}">HTML</a>,
+    <a href="{% url chronam_batches_atom %}">Atom</a> and 
+    <a href="{% url chronam_batches_json %}">JSON</a> views. These views provide
+    links to where the files comprising the batch can be fetched with a web
+    crawling tool like <a href="http://www.gnu.org/software/wget/">wget</a>.</li>
+    <li>OCR Bulk Data: the complete set of OCR XML and text files that make up
+    the newspaper collection are made available as compressed archive files. 
+    These files are listed in the <a href="{% url chronam_ocr %}">OCR</a> 
+    report, and are also made available via   
+    <a href="{% url chronam_ocr_atom %}">Atom</a> and
+    <a href="{% url chronam_ocr_json %}">JSON</a> feeds that will allow
+    you to build automated workflows for updating your local collection.</li>
+</ul>
+</p>
 <p class="backtotop"><a href="#skip_menu">Top</a></p> 
 
 <a name="cors_jsonp"></a>
