new openseadragon, partially working. refs #1110

--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -150,7 +150,7 @@
             var minLevel = 10;
             var maxLevel = Math.ceil(Math.log(Math.max(width, height)) / Math.log(2));
 
-            ts = new Seadragon.TileSource(width, height, tileSize, tileOverlap, minLevel, maxLevel);
+            ts = new OpenSeadragon.TileSource(width, height, tileSize, tileOverlap, minLevel, maxLevel);
 
             ts.getTileUrl =  function(level, column, row) {
                 var px = 0
@@ -187,10 +187,12 @@
                 return '{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}' + 'image_'+tile_width+'x'+tile_height+'_from_'+x1+','+y1+'_to_'+x2+','+y2+'.jpg';
             }
 
-            Seadragon.Config.autoHideControls = false;
-    	    var config = new Seadragon.Config();
+            var config = {}; 
     	    config.debugMode = false;
-    	    config.navImages = {
+            config.element = document.getElementById("viewer_container");
+            config.autoHideControls = false;
+            config.navImages = {
+    	                showNavigationControl: false,
         		zoomIn: {
         		    REST: "{% memorious 'media/images/zoomin_rest.png' %}",
         		    GROUP: "{% memorious 'media/images/zoomin_grouphover.png' %}",
@@ -216,25 +218,26 @@
         		    DOWN: "{% memorious 'media/images/fullpage_pressed.png' %}"
         		}
     	    };
-    	    config.showNavigationControl = false;
     
-            var viewer = new Seadragon.Viewer("viewer_container", undefined, undefined, undefined, undefined, undefined, config);
+            var viewer = new OpenSeadragon.Viewer(config);
     
-    	    viewer.addControl("full_header", Seadragon.ControlAnchor.NONE);
-    
-    	    var navControl = new Seadragon.NavControl(viewer);
+    	    viewer.addControl("full_header", OpenSeadragon.ControlAnchor.NONE);
+
+            /*
+    	    var navControl = new OpenSeadragon.ControlDock(viewer);
     	    viewer.navControl = navControl;
     	    navControl.elmt.id = "nav_control";
-            viewer.addControl(navControl.elmt, Seadragon.ControlAnchor.TOP_LEFT);
+            viewer.addControl(navControl.elmt, OpenSeadragon.ControlAnchor.TOP_LEFT);
+            */
     
             output = document.getElementById("outputText");
-            viewer.get_events().addHandler("open", addOverlays);
-            viewer.get_events().addHandler("open", onOpen);
-            viewer.get_events().addHandler("open", resizePrint);
-            viewer.get_events().addHandler("animationfinish", resizePrint);
-            viewer.get_events().addHandler("animationstart", onAnimationStart);
-            viewer.get_events().addHandler("animationfinish", onAnimationFinish);
-            viewer.get_events().addHandler("resize", fullHeaderVisibility);
+            viewer.addHandler("open", addOverlays);
+            viewer.addHandler("open", onOpen);
+            viewer.addHandler("open", resizePrint);
+            viewer.addHandler("animationfinish", resizePrint);
+            viewer.addHandler("animationstart", onAnimationStart);
+            viewer.addHandler("animationfinish", onAnimationFinish);
+            viewer.addHandler("resize", fullHeaderVisibility);
     
             {% ifequal mode "full" %}
     	    viewer.setFullPage(true);
@@ -246,7 +249,8 @@
       
         function fullHeaderVisibility(viewer)
         {
-            var elmt = Seadragon.Utils.getElement("full_header");
+            /* 
+            var elmt = OpenSeadragon.Utils.getElement("full_header");
     	    var i = viewer._getControlIndex(elmt);
     	    if (i >= 0) {
     		  viewer._controls[i].setVisible(viewer.isFullPage());
@@ -256,21 +260,22 @@
     	    } else {
     		    viewer.navControl.elmt.style.margin = "0px";
     	    }
+            */    
         }
         
         function resizePrint(viewer)
         {
             var image = viewer.source;
             var zoom = viewer.viewport.getZoom(); 
-            var size = new Seadragon.Rect(0, 0, image.dimensions.x, image.dimensions.y);
+            var size = new OpenSeadragon.Rect(0, 0, image.dimensions.x, image.dimensions.y);
             var container = viewer.viewport.getContainerSize();
             var fit_source = fitWithinBoundingBox(size, container);
             var total_zoom = fit_source.x/image.dimensions.x;
             var container_zoom = fit_source.x/container.x;
             var level =  (zoom * total_zoom) / container_zoom;
-            var box = getDisplayRegion(viewer, new Seadragon.Point(parseInt(image.dimensions.x*level), parseInt(image.dimensions.y*level)));
-            var scaledBox = new Seadragon.Rect(parseInt(box.x/level), parseInt(box.y/level), parseInt(box.width/level), parseInt(box.height/level));
-            var d = fitWithinBoundingBox(box, new Seadragon.Point(681, 817));
+            var box = getDisplayRegion(viewer, new OpenSeadragon.Point(parseInt(image.dimensions.x*level), parseInt(image.dimensions.y*level)));
+            var scaledBox = new OpenSeadragon.Rect(parseInt(box.x/level), parseInt(box.y/level), parseInt(box.width/level), parseInt(box.height/level));
+            var d = fitWithinBoundingBox(box, new OpenSeadragon.Point(681, 817));
             var dimension = '{% url chronam_page title.lccn,issue.date_issued,issue.edition,page.sequence %}'+'print/image_'+d.x+'x'+d.y+'_from_'+ scaledBox.x+','+scaledBox.y+'_to_'+scaledBox.getBottomRight().x+','+scaledBox.getBottomRight().y;
             jQuery("#clip").attr('href', dimension);
             jQuery(".locshare-print-button").find('a:first').attr('href', dimension).click(function(event) {
@@ -280,36 +285,36 @@
 
         function fitWithinBoundingBox(d, max) {
             if (d.width/d.height > max.x/max.y) {
-                return new Seadragon.Point(max.x, parseInt(d.height * max.x/d.width));
+                return new OpenSeadragon.Point(max.x, parseInt(d.height * max.x/d.width));
             } else {
-                return new Seadragon.Point(parseInt(d.width * max.y/d.height),max.y);
+                return new OpenSeadragon.Point(parseInt(d.width * max.y/d.height),max.y);
             }
         }
     
         function getDisplayRegion(viewer, source)
         {
             //Determine portion of scaled image that is being displayed
-            var box = new Seadragon.Rect(0, 0, source.x, source.y);
+            var box = new OpenSeadragon.Rect(0, 0, source.x, source.y);
             var container = viewer.viewport.getContainerSize();
             var bounds = viewer.viewport.getBounds();
             //If image is offset to the left
             if (bounds.x > 0){
-                box.x = box.x - viewer.viewport.pixelFromPoint(new Seadragon.Point(0,0)).x;
+                box.x = box.x - viewer.viewport.pixelFromPoint(new OpenSeadragon.Point(0,0)).x;
             }
             //If full image doesn't fit
             if (box.x + source.x > container.x) {
-                box.width = container.x - viewer.viewport.pixelFromPoint(new Seadragon.Point(0,0)).x;
+                box.width = container.x - viewer.viewport.pixelFromPoint(new OpenSeadragon.Point(0,0)).x;
                 if (box.width > container.x) {
                     box.width = container.x;
                 }
             }
             //If image is offset up
             if (bounds.y > 0) {
-                box.y = box.y - viewer.viewport.pixelFromPoint(new Seadragon.Point(0,0)).y;
+                box.y = box.y - viewer.viewport.pixelFromPoint(new OpenSeadragon.Point(0,0)).y;
             }
             //If full image doesn't fit
             if (box.y + source.y > container.y) {
-                box.height = container.y - viewer.viewport.pixelFromPoint(new Seadragon.Point(0,0)).y;
+                box.height = container.y - viewer.viewport.pixelFromPoint(new OpenSeadragon.Point(0,0)).y;
                 if (box.height > container.y) {
                     box.height = container.y;
                 }
@@ -319,10 +324,10 @@
 
         function addOverlay(viewer, x1, y1, x2, y2) {
 		    var img = document.createElement("img");
-		    var placement = Seadragon.OverlayPlacement.BOTTOM;
+		    var placement = OpenSeadragon.OverlayPlacement.BOTTOM;
                 
             var div = document.createElement("div");
-            var rect = new Seadragon.Rect(x1, y1, x2, y2);
+            var rect = new OpenSeadragon.Rect(x1, y1, x2, y2);
 
             div.className = "overlay";
             viewer.drawer.addOverlay(div, rect);
@@ -368,7 +373,7 @@
            show("Animation finished");
        }
 
-       Seadragon.Utils.addEvent(window, "load", init);
+       OpenSeadragon.addEvent(window, "load", init);
     </script>
 
     <script type="text/javascript">
