--- a/core/templates/page.html
+++ b/core/templates/page.html
@@ -331,25 +331,25 @@
         function addOverlays(viewer) {
             var $ = jQuery; 
             var dimensions = viewer.source.dimensions;
-            var factor = dimensions.y / dimensions.x;
-            $.each("{{words|default:""}}".split("+"), function(index, word) {
-                if (word!="") {
-                    $.getJSON('{% url chronam_page_coordinates page.issue.title.lccn,page.issue.date_issued,page.issue.edition,page.sequence %};words='+word, function(all_coordinates) {
+            $.getJSON('{% url chronam_page_coordinates page.issue.title.lccn,page.issue.date_issued,page.issue.edition,page.sequence %}', function(all_coordinates) {
+                var scale = 1 / all_coordinates["width"];
+
+                $.each("{{words|default:""}}".split("+"), function(index, word) {
+                    if (word!="") {
                         var boxes = [];
-                        for (word in all_coordinates) {
-                            var coordinates = all_coordinates[word];
-                            $.each(coordinates, function(index, value) {
-                                addOverlay(viewer, 
-                                           value["hpos"],
-                                           value["vpos"]*factor,
-                                           value["width"],
-                                           value["height"]*factor);
-                            });
-                        };
-                    });
-                }
-            });
-        }
+
+                        var coordinates = all_coordinates["coords"][word];
+                        $.each(coordinates, function(index, value) {
+                            addOverlay(viewer,
+                                       value[0]*scale,
+                                       value[1]*scale,
+                                       value[2]*scale,
+                                       value[3]*scale);
+                        });
+		    }
+		});
+	    });
+	}
 
        function show(msg) {
            var timeString = new Date().toLocaleTimeString();
