--- a/media/base.css
+++ b/media/base.css
@@ -1748,6 +1748,8 @@ table.marc-record span.marc-subfield-value {}
 	#item-ctrl {
 	background:#afafaf url(./images/bg_item_ctrl.png) 0 0 repeat-x;
 	overflow:hidden;
+        width: 100%;
+        height: 40px;
 	}
 	#item-ctrl .c-images,
 	#item-ctrl .c-pages,
@@ -1757,8 +1759,8 @@ table.marc-record span.marc-subfield-value {}
 	#item-ctrl .c-clip {
 	padding:9px 11px;
 	height:17px;
-	display:block;
-	float:left;
+	/*display:block;
+	float:left;*/
 	}
 	#item-ctrl .c-images {background:transparent url(./images/item_dot_divider.png) 100% 50% no-repeat;}
 	#item-ctrl .c-pages {border-right:1px solid #a7a7a7;}
@@ -1766,7 +1768,7 @@ table.marc-record span.marc-subfield-value {}
 	#item-ctrl .c-view {border-left:1px solid #f0f0f0;}
 	#item-ctrl .c-download,
 	#item-ctrl .c-clip {
-	background:transparent url(./images/item_dot_divider.png) 0 50% no-repeat;
+	background:transparent url(./images/item_dot_divider.png) 0 30% no-repeat;
 	}
 	#item-ctrl .c-pages img,
 	#item-ctrl .c-issues img,
@@ -1782,10 +1784,12 @@ table.marc-record span.marc-subfield-value {}
 	margin-left: 4px;
 	margin-right: 4px;
 	}
+        /*
 	#item-ctrl .c-view .text {
 	padding-right:16px;
 	background:transparent url(./images/item_text_icon.png) 100% 2px no-repeat;
 	}
+        */
 	#item-ctrl .c-view span {
 	color:#ccc;
 	}
