refs #1232 fixed typos

--- a/core/templates/reports/batches.html
+++ b/core/templates/reports/batches.html
@@ -14,9 +14,9 @@ The Library of Congress regularly receives digitized newspaper content
 from <a href="{% url chronam_awardees %}">grant awardees</a> in the <a
     href="http://www.loc.gov/ndnp/">National Digital Newspaper Program</a>.
 Content is delivered in the form of batches, where each batch can contain
-one or issues, from one or more newspapers. As batches are loaded into
+one or more issues, from one or more newspapers. As batches are loaded into
 Chronicling America they will appear here. More details about the 
-batch can be discovered by clickin gon the batch name link.
+batch can be discovered by clicking on the batch name link.
 </p>
 
 <p>
