minor wording change

--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -41,8 +41,8 @@ maps to the URL
 </p>
 
 <p>
-If you are interested in automated access to this data you may be interested 
-in the <a href="{% url chronam_ocr_atom %}">Atom</a> and
+If you are interested in automated access to this data you may want to use the 
+<a href="{% url chronam_ocr_atom %}">Atom</a> and
 <a href="{% url chronam_ocr_json %}">JSON</a> versions of this table.
 </p>
 
