normalized ocr data feed titles, and added <link> elements to the html to indicate availability

--- a/core/templates/reports/ocr.html
+++ b/core/templates/reports/ocr.html
@@ -3,6 +3,12 @@
 {% load memorious %}
 {% load custom_filters %}
 
+{% block extrahead %}
+        {{ block.super }}
+        <link rel="alternate" type="application/atom+xml" href="{% url chronam_ocr_atom %}" title="Chronicling America OCR Data Feed" />
+        <link rel="alternate" type="application/json" href="{% url chronam_ocr_json %}" title="Chronicling America OCR Data Feed (JSON)" />
+{% endblock %}
+
 {% block box-tabs %}
 {% endblock %}
 
