--- a/core/templates/reports/ocr.xml
+++ b/core/templates/reports/ocr.xml
@@ -1,7 +1,7 @@
 {% load custom_filters %}<?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
 
-    <title>NDNP OCR Data</title>
+    <title>Chronicling America OCR Data Feed</title>
     <link rel="self" type="application/atom+xml" href="http://{{ request.get_host }}{% url chronam_ocr_atom %}" />
     <id>info:lc/ndnp/ocr</id>
     <author>
